Add peer comparison endpoint
